chart_deps/fluent/fluentbit/filters: filter_obj.filters type from dict to list

--- a/charts/chart_deps/fluent/fluentbit/filters/templates/clusterfilters.yaml
+++ b/charts/chart_deps/fluent/fluentbit/filters/templates/clusterfilters.yaml
@@ -1,14 +1,4 @@
 {{- range $cl_filter_name, $cl_filter_obj :=  .Values.clusterFilters }}
-{{- $filters_map := $cl_filter_obj.filters }}
-{{/*
-We need to use sortAlpha here so that sidecars will appear
-in predictable order. Also sortAlpha cant be used with 'values'
-function because it doesnt produce object
-*/}}
-{{- $filters_list := list }}
-{{- range $fName := (keys $filters_map | sortAlpha) }}
-{{- $filters_list = append $filters_list (get $filters_map $fName) }}
-{{- end }}
 ---
 apiVersion: fluentbit.fluent.io/v1alpha2
 kind: ClusterFilter
@@ -23,7 +13,7 @@ metadata:
 {{- tpl (toYaml .) $ | nindent 4 }}
 {{- end }}
 spec:
-  {{- with $filters_list }}
+  {{- with $cl_filter_obj.filters }}
   filters:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
