charts/grafana: use list for fluent filters

--- a/charts/grafana/values.yaml
+++ b/charts/grafana/values.yaml
@@ -30,8 +30,7 @@ fluentbit-filters:
       match: kube.pods.grafana.*
       ordinal: 101
       filters:
-        1removeKeys:
-          modify:
+        - modify:
             rules:
               - remove: dsUID
 
