charts/fluent: logs json

--- a/charts/fluent/values.yaml
+++ b/charts/fluent/values.yaml
@@ -340,7 +340,7 @@ operator:
     - key: CONTAINER_ROOT_DIR
       value: /var/log
   args:
-    - '-zap-encoder'
+    - '-zap-encoder json'
   clusterRole:
     enabled: true
     rules:
