charts/fluent: fix args

--- a/charts/fluent/values.yaml
+++ b/charts/fluent/values.yaml
@@ -340,7 +340,8 @@ operator:
     - name: CONTAINER_ROOT_DIR
       value: /var/log
   args:
-    - '-zap-encoder json'
+    - '-zap-encoder'
+    - 'json'
   clusterRole:
     enabled: true
     rules:
